# alass

./: .gitignore  Cargo.toml  Makefile  MakefileWindows64  README.md  plots_from_videolist.sh  rustfmt.toml
alass-cli/: Cargo.toml
alass-cli/examples/: generate_statistics_from_database.rs
alass-cli/src/: errors.rs  lib.rs  main.rs
alass-cli/src/video_decoder/: ffmpeg_binary.rs  ffmpeg_library.rs  mod.rs
alass-core/: Cargo.toml  README.md
alass-core/src/: alass.rs  lib.rs  rating_type.rs  segments.rs  statistics.rs  time_types.rs  timespan_ops.rs
src/: lib.rs  main.rs
src/binary/: errors.rs  mod.rs
src/binary/formats/: common.rs  idx.rs  mod.rs  srt.rs  ssa.rs
src/internal/: aligner.rs  delta_compression.rs  mod.rs  rating_type.rs  time_types.rs  timespan_ops.rs  utils.rs
statistics-helpers/: export_subtitle_from_database.py  generate_database_from_videolist.py  generate_plots_from_statistics.py  list-all-subtitles.py  plots_from_videolist.sh  worst_movies.py
test_data/opensubtitles_download_helper/: download_subtitles_for_movie.py
