[package]
name = "alass-cli"
version = "1.0.1"
authors = ["kaegi <kaegi.dev@gmail.com>"]
description = "Automatic Language-Agnostic Subtitle Synchronization (Command Line Tool)"
repository = "https://github.com/kaegi/alass"
documentation = "https://docs.rs/alass-cli"
readme = "../README.md"
keywords = ["align", "subtitle", "automatic", "api", "tool"]
license = "GPL-3.0"
edition = "2018"

[features]
default = ["ffmpeg-binary"]

# this enables writing of statistics but incurs a performance penalty
# of 15% even when not used by the user of the program
statistics = ["alass-core/statistics"]

# use exactly one of these two features
ffmpeg-binary = ["byteorder"] 
# FFMPEG-LIB ffmpeg-library = ["ffmpeg-sys"]


[dependencies]
alass-core = { version = "1.0.0", path = "../alass-core" }
webrtc-vad = { version = "0.1.0", path = "../../webrtc-vad" }
subparse = { version = "0.6.0", path = "../../subparse" }

clap = "2.33.0"
pbr = "1.0.0-alpha.2"
encoding_rs = "0.8.17"
libc = "0.2.60"
failure = "0.1.5"
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive"] }
byteorder = { version = "1.3.2", optional = true }

# FFMPEG-LIB [dependencies.ffmpeg-sys]
# FFMPEG-LIB optional = true
# FFMPEG-LIB git = "https://github.com/meh/rust-ffmpeg-sys"
# FFMPEG-LIB rev = "4f14151b9b8134f1f029d49d02cbea5c7337dedb"
