[package]
name = "alass-core"
version = "2.0.0"
authors = ["kaegi <kaegi.dev@gmail.com>"]
description = "Automatic Language-Agnostic Subtitle Synchronization (Library)"
repository = "https://github.com/kaegi/alass/alass-core"
documentation = "https://docs.rs/alass-core"
readme = "README.md"
keywords = ["subtitle", "align", "automatic", "api", "tool"]
license = "GPL-3.0"
edition = "2018"

[features]
default = []

# In nosplit mode, the most expensive operation is sorting of sorted
# vectors. In runtime analysis, using a heap-sort-like algorithm
# is more performant than assuming a large unsorted array. In
# tests it is only half as fast. (1s vs 2s)
nosplit-heap-sort = []

[dependencies]

[dev-dependencies]
rand = "0.7"
